# debugler

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE  LICENCE.rtf  NOTICE  README  README.md  UpgradeLog.htm  appveyor.yml  bla.txt  build.py  build.sh  debugler.sln  default.dglproj  tags.sh
src/: CMakeLists.txt  android.toolchain.cmake  build-android.bat  build.bat  build.sh  debuggler.props  debugler.debug.props  debugler.props  debugler.release.props  debugler.sln  version.inl
src/DGLAndroidInstaller/: CMakeLists.txt  installer.cpp
src/DGLCommon/: CMakeLists.txt  DGLCommon.vcxproj  DGLCommon.vcxproj.filters  def.h  dglcommon.rc  dglconfiguration.h  gl-anyvalue.h  gl-entrypoints.cpp  gl-entrypoints.h  gl-formats.cpp  gl-formats.h  gl-glue-headers.h  gl-headers.h  gl-resource.cpp  gl-resource.h  gl-serialized.cpp  gl-serialized.h  gl-statequery-db.cpp  gl-statequery-db.h  gl-statequery-db.inl  gl-types.cpp  gl-types.h  ipc.cpp  ipc.h  os.cpp  os.h  resource.h  version.cpp  version.h  wa.h
src/DGLGui/: CMakeLists.txt  CompleteInject.cpp  CompleteInject.h  DGLGui.vcxproj  DGLGui.vcxproj.filters  Debugler.vcxproj  Debugler.vcxproj.filters  dgladbdevice.cpp  dgladbdevice.h  dgladbinterface.cpp  dgladbinterface.h  dglandroidselectdev.cpp  dglandroidselectdev.h  dglbacktraceview.cpp  dglbacktraceview.h  dglblitterbase.cpp  dglblitterbase.h  dglbreakpointdialog.cpp  dglbreakpointdialog.h  dglbreakpointview.cpp  dglbreakpointview.h  dglbufferview.cpp  dglbufferview.h  dglbusydialog.cpp  dglbusydialog.h  dglconfigdialog.cpp  dglconfigdialog.h  dglconnectandroiddialog.cpp  dglconnectandroiddialog.h  dglconnectdialog.cpp  dglconnectdialog.h  dglconnectdialog.ui  dglcontoller.cpp  dglcontroller.cpp  dglcontroller.h  dglfboview.cpp  dglfboview.h  dglfboviewitem.ui  dglframebufferview.cpp  dglframebufferview.h  (+59 more)
src/DGLGui/QHexEdit/: xbytearray.cpp
src/DGLGui/res/: darkorange.stylesheet  glsl.xml
src/DGLGui/ui/: dgl_projproperties_tcpconn.ui  dglandroidselectdev.ui  dglbacktraceview.ui  dglbreakpointdialog.ui  dglconfigdialog.ui  dglconnectandroid.ui  dglconnectandroidadb.ui  dglfboviewitem.ui  dglframebufferviewitem.ui  dglgpuview.ui  dglmainwindow.ui  dglpixelrectangleview.ui  dglprogramview.ui  dglprojectdialog.ui  dglprojproperties_android.ui  dglprojproperties_attach.ui  dglprojproperties_runapp.ui  dglprojproperties_tcpconn.ui  dglrenderbufferviewitem.ui  dglrundialog.ui  dglshaderview.ui  dglstateview.ui  dgltextureviewitem.ui
src/DGLInject/: CMakeLists.txt  DGLInject.vcxproj  DGLInject.vcxproj.filters  inject.cpp  inject.h
src/DGLLoader/: CMakeLists.txt  DGLLoader.vcxproj  DGLLoader.vcxproj.filters  main.cpp  process.cpp  process.h
src/DGLNet/: CMakeLists.txt  DGLNet.vcxproj  DGLNet.vcxproj.filters  client.cpp  client.h  message-wrap.h  message.cpp  message.h  serializer-fwd.h  server.cpp  server.h  transport.cpp  transport.h  transport_detail.h
src/DGLNet/protocol/: anyvalue.h  ctxobjname.cpp  ctxobjname.h  dglconfiguration.h  entrypoint.cpp  entrypoint.h  fwd.h  message.cpp  message.h  messagehandler.h  msgutils.h  pixeltransfer.cpp  pixeltransfer.h  request.cpp  request.h  resource.cpp  resource.h  shared_ptr_converter.h
src/DGLWrapper/: CMakeLists.txt  DGLWrapper.h  DGLWrapper.vcxproj  DGLWrapper.vcxproj.filters  action-manager.cpp  action-manager.h  actions.cpp  actions.h  api-loader.cpp  api-loader.h  backtrace.cpp  backtrace.h  debugger.cpp  debugger.h  display.cpp  display.h  dl-intercept.cpp  dl-intercept.h  dl.cpp  dl.h  dllmain.cpp  exechook.cpp  exechook.h  gl-auxcontext.cpp  gl-auxcontext.h  gl-context.cpp  gl-context.h  gl-headers-inside.h  gl-object-namespace.cpp  gl-object-namespace.h  gl-objects.cpp  gl-objects.h  gl-shadowstate.cpp  gl-shadowstate.h  gl-state.cpp  gl-state.h  gl-statequery-db.inl  gl-statequery.cpp  gl-statequery.h  gl-statesetters.cpp  (+23 more)
src/Installer/: CMakeLists.txt  Installer.vdproj
src/Installer/QTCopy/: Makefile  QTCopy.vcxproj
src/SetupWizard/: SetupWizard.vdproj
src/buildtools/: set_version.py
src/buildtools/cmake/: CMakeLists.txt
src/buildtools/toolchains/: android.toolchain.cmake
src/codegen/: CMakeLists.txt  Makefile  android-gles1ext.exports  android-gles2ext.exports  codegen.py  codegen.vcxproj  codegen.vcxproj.filters  gl-android.xml  wgl-notrace.xml
src/codegen/input/: egl.xml  genheaders.py  gl.xml  gl2ext.h  glx.xml  reg.py  temp.h  wgl.h  wgl.xml  wglext-partial.h
src/codegen/khronos-xml/: egl.xml  gl.xml  wgl.xml
src/glheaders/EGL/: eglplatform.h
src/source-highlight-3.1.7/: aclocal.m4  config.h.in  source-highlight.vcxproj
src/source-highlight-3.1.7/doc/: c_string.lang.texinfo  clike_vardeclaration.lang.texinfo  comment-show.show.texinfo  comment-show2.show.texinfo  csharp.lang.texinfo  css_example.css.texinfo  default.css.texinfo  diff.lang.texinfo  example-n.diff.texinfo  extreme_comment.lang.texinfo  html_common.outlang.texinfo  infoformatter.h.texinfo  javadoc.outlang.texinfo  log.langelems.texinfo  source-highlight-console-main.cpp.texinfo  source-highlight-lib.html  source-highlight.1  source-highlight.html  style.lang.texinfo  symbols.lang.texinfo  syslog.style.texinfo  test_extreme_comment_1.texinfo  test_extreme_comment_3.texinfo  test_regexrange_main.java.texinfo  test_vardecl.cc.texinfo  texinfo.style.texinfo  txt2texinfo.txt.texinfo.texinfo
src/source-highlight-3.1.7/m4/: Makefile.in
src/source-highlight-3.1.7/src/: Makefile.in
src/srchiliteqt/: .cproject  .project  ChangeLog  NOTES  configure.ac  qt3_notes.txt  srchiliteqt.vcxproj  srchiliteqt.vcxproj.filters
src/srchiliteqt/boiler/: autotroll.mk
src/srchiliteqt/build_aux/: .gitignore
src/srchiliteqt/doc/: .gitignore  Makefile.am  settingsdialog.cpp  simpleusage.cpp  source-highlight-qt.texinfo
src/srchiliteqt/lib/: lib.pro
src/srchiliteqt/m4/: .gitignore  autotroll.m4
src/srchiliteqt/tests/: Makefile.am  qt3_highlighter_example_main.cpp  qt4_highlighter_example_main.cpp  qt4_highlighter_view_main.cpp  simple.lang
src/tests/: CMakeLists.txt
src/tests/UT/: ADBInterface.cpp  main.cpp  (+8 more)
(+91 files in other folders)
